tests/reference/ast_new-while1-a4c6382.stderr
syntax error: Token 'pass' is unexpected here
  --> tests/parser/while1.py:13:14
   |
13 | while i < 3: pass
   |              ^^^^ 
